--- a/ejercicio17/form.html
+++ b/ejercicio17/form.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ejercicio 15 - Bootstrap</title>
+    <title>Ejercicio 17 - Bootstrap</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -17,7 +17,7 @@
         <a href="form.html" class="nav-link mx-3 rounded-3 col">Pagina Formulario</a>
     </nav>
     <div class="col-6 mx-auto m-5">
-        <form action="" class="border border-2 border-muted bg-light p-3 rounded-2">
+        <form action="form.html" method="get" class="border border-2 border-muted bg-light p-3 rounded-2" novalidate>
             <legend class="fw-bold">Formulario Registro</legend>
             <div class="mb-4">
                 <label class="form-label fw-bold" for="email">Email:</label>
