--- a/ejercicio8/home.html
+++ b/ejercicio8/home.html
@@ -15,9 +15,9 @@
 <body>
     <nav>
         <a href="home.html">Home</a>
-        <a href="products.html">Products</a>
-        <a href="about.html">About</a>
-        <a href="contact.html">Contact</a>
+        <a href="../products.html">Products</a>
+        <a href="../about.html">About</a>
+        <a href="../contact.html">Contact</a>
     </nav>
 </body>
 
